err at cloudinary

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 PORT = 8000
 MONGODB_URL = "mongodb+srv://akshayabathala:akshaya123@cluster0.tzr0wps.mongodb.net/virtualAssistant"
 JWT_SECRET="CTFJGKJHGJUFYT"
+CLOUDINARY_CLOUD_NAME="di7vzhahb"
+CLOUDINARY_API_KEY="768488662126517"
+CLOUDINARY_API_SECRET ="2AAo94vXpXVmJkSq-j1VobTu_eE"
